--- a/2016-part1/task7/style.css
+++ b/2016-part1/task7/style.css
@@ -8,6 +8,7 @@ header{
   width: 100%;
   height: 60px;
   font-size: 0;
+  /* background: rgba(0,0,0,.2); */
 }
 
 #headleft{
@@ -30,7 +31,8 @@ header nav{
   display: inline-block;
   width: 30%;
   height: 60px;
-  background-color: lightblue;
+  /* background-color: lightblue; */
+  vertical-align: top;
 }
 header nav ul{
   width: 100%;
@@ -39,4 +41,85 @@ header nav ul{
   padding: 0;
   list-style: none;
   box-sizing: border-box;
+}
+header nav ul li{
+  display: inline-block;
+  width: 20%;
+  /* height: 60px; */
+  line-height: 60px;
+  font-size: 14px;
+  box-sizing: border-box;
+  text-align: center;
+  cursor: pointer;
+  transition: color 0.4s ease-in-out;
+}
+nav ul .move{
+  position: absolute;
+  left: 0;
+  top: 56px;
+  border-top: 4px solid #e53c3c;
+  transition: left 0.4s ease-in-out;
+}
+nav ul li:hover{
+  color: #e53c3c;
+}
+nav ul li:nth-of-type(1):hover~.move{
+  left: 0%;
+}
+nav ul li:nth-of-type(2):hover~.move{
+  left: 20%;
+}
+nav ul li:nth-of-type(3):hover~.move{
+  left: 40%;
+}
+nav ul li:nth-of-type(4):hover~.move{
+  left: 60%;
+}
+nav ul li:nth-of-type(5):hover~.move{
+  left: 80%;
+}
+header #headright{
+  position: relative;
+  left: 45%;
+  display: inline-block;
+  width: 6%;
+  height: 60px;
+  text-align: center;
+  line-height: 60px;
+  font-size: 14px;
+  cursor: pointer;
+  background: url(picture/icon-2.jpg) no-repeat left;
+  color: #e53c3c;
+}
+#part1{
+  position: relative;
+  top: 17px;
+  width: 100%;
+  height: 650px;
+  margin-top: -16px;
+  background: url(picture/pic01.jpg);
+  background-size: 100% auto;
+  color: #fff;
+}
+section #ty{
+  position: absolute;
+  left: 9%;
+  top: 130px;
+}
+section #ty p{
+  font-size: 22px;
+  line-height: 8px;
+}
+section #ty p:first-child{
+  font-family: Arial;
+  font-size: 60px;
+}
+section #ty span{
+  width: 30%;
+  padding: 12px 100px;
+  font-size: 30px;
+  background: #e53c3c;
+  text-align: center;
+  line-height: 160px;
+  cursor: pointer;
 }
