--- a/2016-part1/task7/style.css
+++ b/2016-part1/task7/style.css
@@ -123,3 +123,263 @@ section #ty span{
   line-height: 160px;
   cursor: pointer;
 }
+section#part2{
+  position: relative;
+  top: 17px;
+  width: 100%;
+  height: 250px;
+  font-size: 0;
+}
+section#part2 ul{
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  box-sizing: border-box;
+}
+section#part2 ul li{
+  display: inline-block;
+  width: 25%;
+  height: 250px;
+  padding-top: 40px;
+  box-sizing: border-box;
+  font-size: 14px;
+  text-align: center;
+}
+section#part3{
+  height: 330px;
+  background: #f5f5f5;
+  text-align: center;
+  line-height: 80px;
+  color: #808080;
+  font-size: 50px;
+}
+section#part3 img{
+  padding-top: 60px;
+}
+section#part4 {
+  position: relative;
+  top: 17px;
+  height: 330px;
+  text-align: center;
+  color: #fff;
+  background: url(picture/pic02.jpg);
+}
+section#part4 p{
+  font-size: 21px;
+  padding: 40px 0 10px 0;
+  margin: 0;
+}
+section#part4 #line{
+  width: 2%;
+  margin-left: 44%;
+  border: 1px solid #fff;
+  transition: width 0.4s ease-in-out;
+}
+section#part4 p:hover~#line{
+  width: 12%;
+}
+section#part4 span{
+  font-size: 14px;
+}
+section#part4 form{
+  margin-top: 30px;
+}
+section#part4 select{
+  width: 16%;
+  height: 35px;
+  color: #a3a3a3;
+  margin-left: 1%;
+}
+section#part4 select:hover{
+  border:1px solid #CD5C5C;
+}
+section#part4 input{
+  width: 16%;
+  height: 35px;
+  padding: 0;
+  margin: 0;
+  margin-left: 1%;
+  color: #fff;
+  background: #CD5C5C;
+  font: 15px 微软雅黑;
+  border: 1px solid #CD5C5C;
+
+  vertical-align: top;
+}
+section#part5{
+  position: relative;
+  top: 17px;
+  height: 600px;
+  text-align: center;
+}
+section#part5 .picture{
+  display: inline-block;
+  margin: 80px 3%;
+}
+section#part5 p{
+  line-height: 0;
+}
+section#part5 h5{
+  color: #a8a8a8;
+}
+section#part5 .two span{
+  color: #a8a8a8;
+  font-size: 14px;
+  line-height: 25px;
+}
+section#part5 #shanghai{
+  font-size: 20px;
+  font-weight: 500;
+  height: 20px;
+  line-height: 0;
+  letter-spacing: 30px;
+  color: #000;
+  padding-left: 15px;
+}
+section#part6{
+  position: relative;
+  top: 17px;
+  height: 560px;
+  font-size: 0;
+}
+section#part6 .left{
+  position: relative;
+  top: 0;
+  display: inline-block;
+  width: 70%;
+  height: 560px;
+  color: #fff;
+  text-align: center;
+  background: url(picture/pic07.jpg) no-repeat;
+  background-size: cover;
+  box-sizing: border-box;
+  vertical-align: top;
+}
+section#part6 .left p{
+  padding: 0;
+  margin: 0;
+  font-size: 25px;
+}
+section#part6 .left p:nth-child(1){
+  font-size: 50px;
+  line-height: 0;
+  margin-top: 150px;
+}
+section#part6 .left p:nth-child(2){
+  font-size: 150px;
+}
+section#part6 .left p:nth-child(3){
+  font-size: 25px;
+}
+section#part6 .left:after{
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: -20px;
+  margin-top: -20px;
+  border: 40px solid;
+  border-color: transparent #fff transparent transparent;
+  /* background: #fff; */
+  /* transform: rotate(45deg); */
+}
+section#part6 .right{
+  position: relative;
+  top: 0;
+  left: 5px;
+  display: inline-block;
+  width: 29%;
+  height: 560px;
+  /* background: lightblue; */
+}
+section#part6 #border{
+  width: 350px;
+  height: 300px;
+  text-align: center;
+  margin: 110px auto;
+}
+section#part6 #border input[type='radio'] {
+  position: relative;
+  top: 300px;
+  width: 10px;
+  height: 10px;
+  cursor: pointer;
+  opacity: 0;
+  z-index: 10;
+}
+
+section#part6 #border .list{
+  display: inline-block;
+  position: relative;
+  top: 288px;
+  margin: 0 2px;
+  width: 10px;
+  height: 10px;
+  border: 2px solid #a8a8a8;
+  border-radius: 10px;
+  z-index: -1;
+}
+section#part6 #border .info{
+  display: none;
+}
+section#part6 #border .info-1{
+  display: block;
+}
+section#part6 #border .info p:first-child{
+  font-size: 22px;
+}
+section#part6 #border .info p:first-child>span{
+  color: red;
+}
+section#part6 #border .info p:last-child{
+  font-size: 14px;
+  line-height: 30px;
+  color: #a8a8a8;
+  transition: color 0.4s ease-in-out;
+}
+section#part6 #border .info p:last-child:hover{
+  color: #000;
+}
+#border #button button{
+  display: inline-block;
+  width: 30%;
+  height: 35px;
+  font-weight: bold;
+  color: #8e4f48;
+  background: #fff;
+  border: 1px solid #e53c3c;
+  cursor: pointer;
+  transition: all 0.4s ease-in-out;
+}
+#border #button button:hover{
+  color: #fff;
+  background: #e53c3c;
+  border-radius: 3px;
+}
+section#part6 #border .list:first-of-type{
+  background: #a8a8a8;
+}
+section#part6 #border input[type='radio']:checked~.list{
+  background: #fff;
+}
+section#part6 #border input[type='radio']:checked~.info{
+  display: none;
+}
+section#part6 #border input[type='radio']:nth-of-type(1):checked~.list:nth-of-type(1){
+  background: #a8a8a8;
+}
+section#part6 #border input[type='radio']:nth-of-type(2):checked~.list:nth-of-type(2){
+  background: #a8a8a8;
+}
+section#part6 #border input[type='radio']:nth-of-type(3):checked~.list:nth-of-type(3){
+  background: #a8a8a8;
+}
+section#part6 #border input[type='radio']:nth-of-type(1):checked~.info-1{
+  display: block;
+}
+section#part6 #border input[type='radio']:nth-of-type(2):checked~.info-2{
+  display: block;
+}
+section#part6 #border input[type='radio']:nth-of-type(3):checked~.info-3{
+  display: block;
+}
